--- a/docs/guide-xjtlu.tex
+++ b/docs/guide-xjtlu.tex
@@ -138,6 +138,8 @@
 
 %\usepackage{color}
 \usepackage{pdfpages}
+
+% \usepackage{xeCJK}
 \AtBeginDocument{\renewcommand{\chaptername}{Week}}
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
@@ -169,27 +171,15 @@ This is a short guide for new staff at Xi'an Jiaotong-Livepool University. All t
 I try to update this book frequently, while I take no responsibility and assumes no liability for any content in this book.
 
 \begin{rmdrd}
-\begin{rmdrd}
-
 A block like this is reading materials.
-
-\end{rmdrd}
 \end{rmdrd}
 
 \begin{rmdas}
-\begin{rmdas}
-
 A block like this is a form.
-
-\end{rmdas}
 \end{rmdas}
 
 \begin{rmdvd}
-\begin{rmdvd}
-
 A block like this is a video.
-
-\end{rmdvd}
 \end{rmdvd}
 
 This book is created with the R package bookdown. The session information is as follows:
@@ -201,9 +191,9 @@ This book is created with the R package bookdown. The session information is as 
 \end{Shaded}
 
 \begin{verbatim}
-## R version 3.6.2 (2019-12-12)
+## R version 4.0.1 (2020-06-06)
 ## Platform: x86_64-w64-mingw32/x64 (64-bit)
-## Running under: Windows 10 x64 (build 18362)
+## Running under: Windows 10 x64 (build 19041)
 ## 
 ## Matrix products: default
 ## 
@@ -219,12 +209,11 @@ This book is created with the R package bookdown. The session information is as 
 ## [6] methods   base     
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] compiler_3.6.2  magrittr_1.5    bookdown_0.19  
-##  [4] tools_3.6.2     htmltools_0.4.0 rstudioapi_0.11
-##  [7] yaml_2.2.1      Rcpp_1.0.4.6    stringi_1.4.6  
-## [10] rmarkdown_2.2   knitr_1.28      stringr_1.4.0  
-## [13] xfun_0.14       digest_0.6.25   rlang_0.4.6    
-## [16] evaluate_0.14
+##  [1] compiler_4.0.1  magrittr_1.5    bookdown_0.20  
+##  [4] tools_4.0.1     htmltools_0.5.0 rstudioapi_0.11
+##  [7] yaml_2.2.1      stringi_1.4.6   rmarkdown_2.3  
+## [10] knitr_1.29      stringr_1.4.0   xfun_0.16      
+## [13] digest_0.6.25   rlang_0.4.7     evaluate_0.14
 \end{verbatim}
 
 The R packages used in this book are:
@@ -350,15 +339,11 @@ Academic staff can keep unlimited books for 180 days, DVDs and short loan for 3 
 \section{Remote access}\label{remote-access}}
 
 \begin{rmdvd}
-\begin{rmdvd}
-
 \begin{itemize}
 \tightlist
 \item
   \href{https://box.xjtlu.edu.cn/smart-link/9d8e7934-d6eb-4400-9285-8f6c14933ed9/}{Tutorial:videos on how to access library services and resources remotely}
 \end{itemize}
-
-\end{rmdvd}
 \end{rmdvd}
 
 \hypertarget{book-purchase}{%
@@ -381,8 +366,6 @@ If you would like our library to buy some books for your teaching or research, t
 The books bought in these three ways will be stored in our library.
 
 \begin{rmdrd}
-\begin{rmdrd}
-
 \begin{itemize}
 \tightlist
 \item
@@ -392,8 +375,6 @@ The books bought in these three ways will be stored in our library.
 \item
   \href{http://libguides.lib.xjtlu.edu.cn/ld.php?content_id=15552277}{Library Policy on Staff Self-Purchase Reimbursement}
 \end{itemize}
-
-\end{rmdrd}
 \end{rmdrd}
 
 \hypertarget{textbooks}{%
@@ -543,8 +524,6 @@ The Recyclable, Residual, and Food waste containers are in staff common rooms, s
 \end{enumerate}
 
 \begin{rmdrd}
-\begin{rmdrd}
-
 \begin{itemize}
 \tightlist
 \item
@@ -552,8 +531,6 @@ The Recyclable, Residual, and Food waste containers are in staff common rooms, s
 \item
   \href{https://box.xjtlu.edu.cn/smart-link/985f3f45-5d2c-4aff-8b83-0f117692e508/}{MITS Reminder Purchase Procedure for IT Hardware and Software}
 \end{itemize}
-
-\end{rmdrd}
 \end{rmdrd}
 
 \hypertarget{vpn}{%
@@ -684,11 +661,7 @@ HUAWEI phone.
 \section{How to make videos}\label{how-to-make-videos}}
 
 \begin{rmdvd}
-\begin{rmdvd}
-
 \url{https://video.xjtlu.edu.cn/Mediasite/Play/d8e1d78569ff48778dfe198a669906261d}
-
-\end{rmdvd}
 \end{rmdvd}
 
 \hypertarget{ice}{%
@@ -721,5 +694,13 @@ As a reminder, several ICE and BigBlueButton user guides related to a variety of
 \item
   \href{https://matlabacademy.mathworks.co}{MATLAB and Simulink online coursesportal}
 \end{itemize}
+
+\hypertarget{financial}{%
+\chapter{Financial}\label{financial}}
+
+\hypertarget{fapiao}{%
+\section{Fapiao}\label{fapiao}}
+
+\begin{center}\includegraphics[width=0.8\linewidth]{image/fapiao} \end{center}
 
 \end{document}
